tests/error/and_type.src
.IPPcode18
defvar GF@a
defvar GF@b
move GF@a int@5
move GF@b bool@true
and GF@a GF@a GF@b